# ghost-minion-cnc

./: .gitignore  Dockerfile  Dockerfile.base  README.md  cnc-redis.conf  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
assets/: cnc_infrastructure_diagram.drawio
cnc/: app.py  logger_setup.py  pyproject.toml
cnc/adapters/: __init__.py  agents_db.py  data_db.py  db_factory.py  kafka.py  redis.py  tasks_db.py
cnc/auth/: validate_agent.py
cnc/cnc_core/: app.py  redis_connect.py
cnc/controllers/: agent.py  task.py
cnc/data-receiver/: app.py
cnc/models/: __init__.py  agent.py  data.py  task.py
cnc/routers/: agent.py  challenge.py  data.py  tasks.py
cnc/schemas/: __init__.py  agent.py  data.py  task.py
cnc/task-provider/: app.py
cnc_gateway/: README.md  gateway.py  pyproject.toml
cnc_gateway/middlewares/: auth_middleware.py
config/: envoy.yaml
consumers/: base_consumer.py
consumers/tools_telemetry/: conumer.py
db-adapters/cnc-redis/: main.py
db_adapters/cnc_redis/: connect.py  main.py
dbs_config/: 00-create-dbs.sql  01-agents-init.sql  02-data-init.sql  03-tasks-init.sql
etl/: README.md  base_consumer.py  base_parser.py
etl/telemetry/: main.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  theme.tsx  vite-env.d.ts
frontend/tests/: agents.json
gateway/: balancer.py
parsers/: base_consumer.py
parsers/files/: consumer.py
parsers/tools_telemetry/: conumer.py
services/agent_crud/: app.py  controller.py  router.py
services/data_receiver/: app.py  config.py  kafka_producer.py  logger.py  schemas.py
services/data_reciver/: Dockerfile  app.py  config.py  kafka_producer.conf  kafka_producer.py  schemas.py
services/gateway/: config.py  gateway.py  redis_client.py
services/task_crud/: app.py  controller.py  db.py  router.py
services/tasks_api/: Dockerfile  app.py
shared/: utils.py
shared/adapters/: __init__.py  agents_db.py  data_db.py  redis.py
shared/controllers/: agent.py  task.py
shared/kafka/: consumer.py  (+1 more)
(+65 files in other folders)
