[project]
name = "cnc"
version = "0.1.0"
description = "Command & control panel"
authors = ["Yechiel Babani <yechielb2000@gmail.com>"]
dependencies = [
    "fastapi[all]",
    "uvicorn",
    "httpx",
    "sqlalchemy",
    "pydantic",
    "elasticsearch",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "redis>=6.0.0",
    "confluent-kafka>=2.10.0",
    "loguru>=0.7.3",
    "requests>=2.32.4",
    "aiohttp>=3.12.13",
    "slowapi>=0.1.9",
    "boto3>=1.39.4",
    "sqlmodel>=0.0.24",
    "psycopg2>=2.9.10",
]

[tool.ruff.lint]
select = ["ALL"]  # Enable all rules by default
ignore = [
    "D", # Ignore documentation warnings
    "ANN", # Ignore type annotation warnings temporarily
    "ERA", # Ignore commented-out code warnings
    "ARG", # Ignore unused arguments warnings
    "INP", # Ignore implicit namespace warnings
    "T20", # Ignore print statements
    "PLR0913", # Ignore too many arguments warning
    "C416" # Ignore list comprehension warnings
]

[tool.ruff.lint.pycodestyle]
max-line-length = 122

[tool.ruff.lint.mccabe]
max-complexity = 10

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
